@@ -1,3 +1,8 @@
+2011-12-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* src/abswordseg.cpp (AnsWordSeg::CreateWordList):
+	  - Reformat source a little bit.
+
 2011-12-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* src/abswordseg.cpp (AbsWordSeg::CreateWordList):
